--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 requests==2.31.0
-Flask==2.2.5
+Flask==2.2.4
 Flask-CORS==4.0.0
 pandas==1.1.5
 beautifulsoup4==4.12.2
 selenium==4.11.2
+webdriver_manager==4.0.0
